# host-api

./: .buildinfo  .gitignore  404.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  readme.md  requirements.txt  scripts.html  search.html  searchindex.js  setup.py
.github/actions/checkout-python-poetry/: action.yaml
.github/actions/poetry/: action.yaml
.github/workflows/: codeql-analysis.yaml  codeql-analysis.yml  documentation.yaml  documentation.yml  pack-builddocs.yaml
_debug/: index.html
_modules/: index.html
_modules/py3dpaxxel/: controller_cli.html  datavis.html  decompose.html  record_step.html  record_step_series.html
_modules/py3dpaxxel/cli/: args.html
_modules/py3dpaxxel/controller/: api.html  blocking_decoder.html  constants.html  runner.html  serial.html  transfer_types.html
_modules/py3dpaxxel/data_decomposition/: datavis_algorithms.html  datavis_runner.html  decompose_algorithms.html  decompose_runner.html
_modules/py3dpaxxel/gcode/: trajectory_generator.html
_modules/py3dpaxxel/log/: setup.html
_modules/py3dpaxxel/octoprint/: api.html  remote_api.html
_modules/py3dpaxxel/samples/: loader.html  samples.html
_modules/py3dpaxxel/sampling_tasks/: exception_task_wrapper.html  series_argument_generator.html  steps_runner.html  steps_series_runner.html
_modules/py3dpaxxel/storage/: file_filter.html  filename.html  filename_fft.html  filename_meta.html  filename_stream.html
_sources/: readme.md.txt  scripts.rst.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/py3dpaxxel/: py3dpaxxel.cli.args.rst.txt  py3dpaxxel.cli.rst.txt  py3dpaxxel.controller.api.rst.txt  py3dpaxxel.controller.blocking_decoder.rst.txt  py3dpaxxel.controller.constants.rst.txt  py3dpaxxel.controller.rst.txt  py3dpaxxel.controller.runner.rst.txt  py3dpaxxel.controller.serial.rst.txt  py3dpaxxel.controller.transfer_types.rst.txt  (+32 more)
apidocs/: index.html
apidocs/py3dpaxxel/: py3dpaxxel.cli.args.html  py3dpaxxel.cli.html  py3dpaxxel.controller.api.html  py3dpaxxel.controller.blocking_decoder.html  py3dpaxxel.controller.constants.html  py3dpaxxel.controller.html  py3dpaxxel.controller.runner.html  py3dpaxxel.controller.serial.html  py3dpaxxel.controller.transfer_types.html  py3dpaxxel.controller_cli.html  py3dpaxxel.data_decomposition.datavis_algorithms.html  py3dpaxxel.data_decomposition.datavis_runner.html  py3dpaxxel.data_decomposition.decompose_algorithms.html  py3dpaxxel.data_decomposition.decompose_runner.html  py3dpaxxel.data_decomposition.html  py3dpaxxel.datavis.html  py3dpaxxel.decompose.html  py3dpaxxel.gcode.html  py3dpaxxel.gcode.trajectory_generator.html  py3dpaxxel.html  py3dpaxxel.log.html  py3dpaxxel.log.setup.html  py3dpaxxel.octoprint.api.html  py3dpaxxel.octoprint.html  py3dpaxxel.octoprint.remote_api.html  py3dpaxxel.record_step.html  py3dpaxxel.record_step_series.html  py3dpaxxel.samples.html  py3dpaxxel.samples.loader.html  py3dpaxxel.samples.samples.html  py3dpaxxel.sampling_tasks.exception_task_wrapper.html  py3dpaxxel.sampling_tasks.html  py3dpaxxel.sampling_tasks.series_argument_generator.html  py3dpaxxel.sampling_tasks.steps_runner.html  py3dpaxxel.sampling_tasks.steps_series_runner.html  py3dpaxxel.storage.file_filter.html  py3dpaxxel.storage.filename.html  py3dpaxxel.storage.filename_fft.html  py3dpaxxel.storage.filename_meta.html  py3dpaxxel.storage.filename_stream.html  (+1 more)
docs/: .gitignore  Makefile  conf.py  index.rst
py3dpaxxel/: .gitignore  controller.py  controller_cli.py  datavis.py  decompose.py  record_step.py  record_step_series.py  run_recording_series.py  run_recording_task.py
py3dpaxxel/cli/: args.py  filename.py
py3dpaxxel/controller/: api.py  background_decoder.py  blocking_decoder.py  constants.py  runner.py  serial.py  transfer_types.py
py3dpaxxel/data_decomposition/: datavis_algorithms.py  datavis_runner.py  decompose_algorithms.py  decompose_runner.py  runner.py
py3dpaxxel/gcode/: trajectory_generator.py
py3dpaxxel/log/: setup.py
py3dpaxxel/octoprint/: api.py  remote_api.py  runner.py
py3dpaxxel/samples/: loader.py  samples.py
py3dpaxxel/sampling_tasks/: __init__.py  exception_task_wrapper.py  runner.py  series_argument_generator.py  steps_runner.py  steps_series_runner.py
py3dpaxxel/storage/: file_filter.py  filename.py  filename_fft.py  filename_meta.py  filename_stream.py
py3dpaxxel/test_data/: test-a81829a6-20231126-185307879-s000-ax-f010-z015.tsv  test-a81829a6-20231126-185309467-s000-ax-f020-z015.tsv  test-a81829a6-20231126-185310982-s000-ax-f030-z015.tsv  test-a81829a6-20231126-185312497-s000-ax-f040-z015.tsv  test-a81829a6-20231126-185314012-s000-ax-f050-z015.tsv  test-a81829a6-20231126-185315527-s000-ax-f060-z015.tsv
python/: .gitignore  3dpaccel.py  fft.py  pyproject.toml  readme.md  setup.py
python/lib/: device_constants.py  device_io.py  device_types.py
python/threedp-accelerometer/: .gitignore  3dpaccel.py  example.tsv  fft.py
python/threedp-accelerometer/lib/: samples_loader.py
python/threedp_accelerometer/: .gitignore  3dpaccel.py  controller.py  datavis.py  example.tsv  feed_octoprint_and_capture.py  run_recording_series.py  run_recording_task.py
python/threedp_accelerometer/cli/: args.py  file_filter.py  file_name.py  filename.py
python/threedp_accelerometer/controller/: api.py  background_decoder.py  runner.py  serial.py  transfer_types.py
python/threedp_accelerometer/data_decomposition/: datavis_algorithms.py  runner.py
python/threedp_accelerometer/gcode/: trajectory_generator.py
python/threedp_accelerometer/log/: log_levels.py
python/threedp_accelerometer/octoprint/: api.py  runner.py  sampling.py
python/threedp_accelerometer/samples/: loader.py  samples.py
python/threedp_accelerometer/sampling_tasks/: runner.py  series_argument_generator.py
threedp_accelerometer/: .gitignore  datavis.py  logging.yaml
threedp_accelerometer/controller/: api.py  runner.py  serial.py
threedp_accelerometer/data_decomposition/: runner.py
threedp_accelerometer/log/: setup.py
threedp_accelerometer/samples/: loader.py
