[tool.poetry]
name = "py3dpaxxel"
version = "0.1.0"
description = "Python API for interacting with the 3DP Accelerometer controller and sensor data visualization."
license = "Apache-2.0"
authors = ["Raoul Rubien <rubienr@sbox.tugraz.at>"]
maintainers = ["Raoul Rubien <rubienr@sbox.tugraz.at>"]
readme = "readme.md"
repository = "https://github.com/3dp-accelerometer"
packages = [{ include = "py3dpaxxel" }]
documentation = "https://github.com/3dp-accelerometer/py3dpaxxel/readme.md"
keywords = ["3d printing", "accelerometer", "adxl345", "stm32", "marlin", "octoprint"]
classifiers = ["Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"]
include = [{ path = "setup.py", format = "sdist" }]
exclude = [
    "py3dpaxxel/data",
    "**/.gitignore",
    "**/.idea",
    "**/__pycache__"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = { version = "^3.5.2", optional = true }
numpy = "^1.24.2"
pyaml = "^23.9.7"
pyserial = "^3.5"
requests = { version = "^2.28.1", optional = true }
scipy = { version = "^1.10.1", optional = true }

[tool.poetry.extras]
data_analysis = ["scipy"]
octoprint = ["requests"]
visualization = ["matplotlib", "scipy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/3dp-accelerometer/host-api/issues"

[tool.poetry.build]
generate-setup-file = false
script = "py3dpaxxel/build/update_setup.py"

[tool.poetry.group.dev.dependencies]
poetry2setup = "^1.1.0"

[build-system]
requires = ["poetry-core", "poetry2setup"]
build-backend = "poetry.core.masonry.api"
