[tool.poetry]
name = "threedp_accelerometer"
version = "0.1.0"
description = "Python API for interacting with the 3dp-accelerometer controller and sensor data visualization."
license = "Apache-2.0"
authors = ["Raoul Rubien <rubienr@sbox.tugraz.at>"]
maintainers = ["Raoul Rubien <rubienr@sbox.tugraz.at>"]
readme = "readme.md"
repository = "https://github.com/3dp-accelerometer"
packages = [{include = "threedp-accelerometer"}]
documentation = "readme.md"
keywords =["3d printing", "accelerometer", "adxl345", "stm32", "marlin", "octoprint"]
classifiers = ["Topic :: System :: Hardware",
               "Topic :: Software Development :: Libraries",
               "Topic :: Software Development :: Libraries :: Python Modules"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = {version = "^3.5.2", optional = true}
numpy = "^1.24.2"
pyserial = "^3.5"
pyaml = "^23.9.7"
requests = {version = "^2.28.1", optional = true}
scipy = {version = "^1.10.1", optional = true}

[tool.poetry.extras]
visualization= ["matplotlib", "scipy"]
octoprint= ["requests"]
data_analysis= ["scipy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/3dp-accelerometer/host-api/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
